--- a/index.html
+++ b/index.html
@@ -1,12 +1,116 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
   <body>
+	<header class="main-header">
+		<div class="container">
+			<nav class="main-navigations>
+		<ul>
+		<li>
+		<a href="#">ИНФОРМАЦИЯ</a>
+		</li>
+		<li>
+		<a href="#">ФОТО И ВИДЕО</a>
+		</li> 
+		<li>
+		<a href="#">КАРТА ШАТАТА</a>
+		</li>
+		<li>
+		<a href="#">ГОСТИНИЦЫ</a>
+		</li>
+		</ul>
+			</nav>
+		</div>
+	</header>
+	
+	<main class="container">
+		<div class="index-logo">
+			<img src="##########" alt="sedonia">
+	
+	<h1>СЕДОНА-НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО</h1>
+	<p1>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КАНЬОН! </p>
+	
+		<section class="features">
+			<div class="features-item">
+	<b class ="features-name">НАСТОЯЩИЙ ГОРОДОК</b>
+	<p1> -№1- </p1>
+	<p1>СЕДОНА - НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ СВОЯЖИЗНЬ</p1>
+			</div>
+	
+		<div class="features-item">
+	<b class ="features-name">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА </b>
+	<p1>-№2-</p1>
+	<p1>ДА, ПО НЕМУ МОЖНО ПРОЙТИСЬ, ЕСЛИ КОНЕЧНО ОСМЕЛИТЕСЬ</p1>
+		</div>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+		<div class="features-item">
+	<b class ="features-name">НЕБОЛЬШАЯ ПЛОЩАДЬ </b>
+	<p1>-№3-</p1>
+	<p1>ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p1>
+		</div>
+
+		<div class="features-item">
+	<b class ="features-name">ТКРАСИВАЯ  ДОРОГА </b>
+	<p1>-№4-</p1>
+	<p1>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО!</p1>
+		</div>
+
+		<div class="features-item">
+	<b class ="features-name">МАЛО ТУРИСТОВ </b>
+	<p1>-№5-</p1>
+	<p1>БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН И ТОЛПЯТСЯ ТАМ</p1>
+		</div>
+  
+	</section>
+</div>
+
+	
+	<header class="header-town">
+	<div class="town-container">
+	<nav class="town-navigations>
+		
+		<ul>
+		<li>
+		<a href="#">ЖИЛЬЁ</a>
+		<p1>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, ВСЁ КАК В КИНО</p1>
+		</li> 
+		<li>
+		<a href="#">ЕДА</a>
+		<p1>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ БУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ</p1>
+		</li> 
+		<li>
+		<a href="#">СУВЕНИРЫ</a>
+		<p1>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИСХОЖДЕНИЯ</p1>
+		</li>
+		</ul>
+ 	 </nav>
+  	</div>
+	</header>
+	
+<div class="container-cantre">
+<h2>ЗАИНТЕРЕСОВАЛИСЬ? </h2>
+<p1>УКАЖИТЕ ПРЕДПОЛОГАЕМЫЕ ДАТЫ ПОЕЗДКИ, ИМЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</p1>
+<form class="appointment-form" action="#####" method="post">
+<input type="text" name="dadain" value="Дата заезда"placeholder="Дата заезда">
+<input type="text" name="dataout" value="Дата выезда"placeholder="Дата выезда">
+<input type="text" name="kinder" value="Дети"placeholder="Дети">
+<input type="text" name="eltern" value="Взрослые"placeholder="Взрослые">
+<button class="btn"type="submit">Найти</button>
+</form>
+</div>
+	
+	
+
+</main>
+	
+
+
+
+
+   
 
   </body>
 </html>
